fixed horizontal scroll

--- a/styles/index.css
+++ b/styles/index.css
@@ -90,10 +90,9 @@ body{
         align-content: space-between;
     }
 
-    body {
+    html, body {
         overflow-x: hidden;
     }
-
 }
 
 
